Adds DropdownSearchList component and associated TokenSearchDropdown story

--- a/ui/app/components/app/index.scss
+++ b/ui/app/components/app/index.scss
@@ -115,3 +115,5 @@
 @import '../ui/account-mismatch-warning/index';
 
 @import '../ui/icon-border/icon-border';
+
+@import '../ui/dropdown-search-list/index';
