--- a/ui/app/pages/settings/contact-list-tab/index.scss
+++ b/ui/app/pages/settings/contact-list-tab/index.scss
@@ -21,7 +21,7 @@
     border-bottom: 1px solid #dedede;
 
     &:hover {
-      border: 1px solid #037DD6;
+      border: 1px solid #037dd6;
       cursor: pointer;
     }
   }
@@ -30,7 +30,8 @@
     padding: 3px;
   }
 
-  &__header, &__header--edit {
+  &__header,
+  &__header--edit {
     &__name {
       font-family: Roboto;
       font-style: normal;
@@ -47,14 +48,14 @@
 
     .button {
       justify-content: flex-end;
-      color: #D73A49;
+      color: #d73a49;
       font-size: 14px;
     }
   }
 
   &__input {
     @extend %input-2;
-    margin-top: .25rem;
+    margin-top: 0.25rem;
 
     &--address {
       font-size: 0.875rem;
@@ -75,17 +76,19 @@
       flex-flow: column nowrap;
       padding: 1.5rem 1.5rem 0 1.5rem;
 
-      &__label, &__label--capitalized {
-        font-size: .75rem;
+      &__label,
+      &__label--capitalized {
+        font-size: 0.75rem;
         color: $Grey-500;
-        margin-bottom: .25rem;
+        margin-bottom: 0.25rem;
       }
 
       &__label--capitalized {
         text-transform: capitalize;
       }
 
-      &__value, &__static-address {
+      &__value,
+      &__static-address {
         display: flex;
         flex-flow: row nowrap;
         font-size: 1.125rem;
@@ -102,7 +105,8 @@
           height: 20px;
           padding: 0;
           background: none;
-          padding-left: 10px;
+          padding-left: 0;
+          margin-left: 10px;
         }
       }
 
@@ -136,7 +140,6 @@
       > div {
         padding-top: 0;
       }
-
     }
 
     .page-container__footer {
@@ -193,17 +196,17 @@
       font-weight: normal;
       font-size: 14px;
       line-height: 20px;
-      color: #6A737D;
+      color: #6a737d;
     }
 
     &__caret {
       display: block;
       background-image: url(/images/caret-right.svg);
       width: 30px;
-      opacity: .5;
+      opacity: 0.5;
       background-repeat: no-repeat;
 
-      [dir='rtl'] & {
+      [dir="rtl"] & {
         transform: rotate(180deg);
       }
     }
@@ -223,7 +226,7 @@
     align-items: center;
     border-radius: 50%;
     border-width: 2px;
-    background: #037DD6;
+    background: #037dd6;
     margin-right: 5px;
     cursor: pointer;
     box-shadow: 0px 2px 16px rgba(0, 0, 0, 0.25);
@@ -238,6 +241,6 @@
   flex: 0.4 1 40%;
 
   @media screen and (max-width: 576px) {
-    flex: 1
+    flex: 1;
   }
 }
