Remove .css file extension from import

--- a/ui/app/css/itcss/components/tooltip.scss
+++ b/ui/app/css/itcss/components/tooltip.scss
@@ -1,4 +1,4 @@
-@import '../../../../../node_modules/react-tippy/dist/tippy.css';
+@import '../../../../../node_modules/react-tippy/dist/tippy';
 
 .metamask-tooltip {
 	padding: 5px !important;
