--- a/ui/app/css/variables/colors.scss
+++ b/ui/app/css/variables/colors.scss
@@ -53,7 +53,7 @@ $Orange-400: #f8883b;
 $Orange-500: #f66a0a;
 $Orange-600: #c65507;
 $Orange-700: #954005;
-$Orange-800: #954005;
+$Orange-800: #632b04;
 $Orange-900: #321602;
 
 $Yellow-100: #fefcde;
@@ -73,4 +73,3 @@ $accent-pink: #ff45d8;
 $neutral-white: #fff;
 $neutral-black: $Black-100;
 $neutral-grey: $Grey-500;
-
