--- a/ui/app/pages/settings/contact-list-tab/index.scss
+++ b/ui/app/pages/settings/contact-list-tab/index.scss
@@ -208,7 +208,7 @@
       opacity: 0.5;
       background-repeat: no-repeat;
 
-      [dir="rtl"] & {
+      [dir='rtl'] & {
         transform: rotate(180deg);
       }
     }
