--- a/ui/app/css/variables/typography.scss
+++ b/ui/app/css/variables/typography.scss
@@ -54,6 +54,7 @@ $font-family: Roboto, Helvetica, Arial, sans-serif;
   font-weight: normal;
   font-size: 2.5rem;
   font-family: $font-family;
+  line-height: 140%;
 }
 
 %H2 {
@@ -61,6 +62,7 @@ $font-family: Roboto, Helvetica, Arial, sans-serif;
   font-weight: normal;
   font-size: 2rem;
   font-family: $font-family;
+  line-height: 140%;
 }
 
 %H3 {
@@ -68,6 +70,7 @@ $font-family: Roboto, Helvetica, Arial, sans-serif;
   font-weight: normal;
   font-size: 1.5rem;
   font-family: $font-family;
+  line-height: 140%;
 }
 
 %H4 {
@@ -75,6 +78,7 @@ $font-family: Roboto, Helvetica, Arial, sans-serif;
   font-weight: normal;
   font-size: 1.125rem;
   font-family: $font-family;
+  line-height: 140%;
 }
 
 %H5 {
@@ -82,6 +86,7 @@ $font-family: Roboto, Helvetica, Arial, sans-serif;
   font-weight: normal;
   font-size: 1rem;
   font-family: $font-family;
+  line-height: 140%;
 }
 
 %H6 {
@@ -96,6 +101,7 @@ $font-family: Roboto, Helvetica, Arial, sans-serif;
   font-weight: normal;
   font-size: 1rem;
   font-family: $font-family;
+  line-height: 140%;
 }
 
 %H7 {
@@ -103,6 +109,7 @@ $font-family: Roboto, Helvetica, Arial, sans-serif;
   font-weight: normal;
   font-size: 0.75rem;
   font-family: $font-family;
+  line-height: 140%;
 }
 
 %H8 {
@@ -110,6 +117,7 @@ $font-family: Roboto, Helvetica, Arial, sans-serif;
   font-weight: normal;
   font-size: 0.625rem;
   font-family: $font-family;
+  line-height: 140%;
 }
 
 %H9 {
@@ -117,5 +125,6 @@ $font-family: Roboto, Helvetica, Arial, sans-serif;
   font-weight: normal;
   font-size: 0.5rem;
   font-family: $font-family;
+  line-height: 140%;
 }
 
