--- a/ui/app/pages/token/index.scss
+++ b/ui/app/pages/token/index.scss
@@ -21,7 +21,7 @@
           height: 61px;
 
           input {
-            @extend %H4;
+            @include H4;
 
             font-weight: bold;
             color: $Black-100;
@@ -121,20 +121,20 @@
       }
 
       &__primary-label {
-        @extend %H4;
+        @include H4;
 
         font-weight: bold;
       }
 
       &__secondary-label,
       &__right-primary-label {
-        @extend %H5;
+        @include H5;
 
         color: $Black-500;
       }
 
       &__right-secondary-label {
-        @extend %H5;
+        @include H5;
 
         color: $Black-500;
         opacity: 0.5;
@@ -143,7 +143,7 @@
   }
 
   &__placeholder {
-    @extend %H4;
+    @include H4;
 
     padding: 16px;
     color: $Black-500;
