Use correct  scss variables

--- a/ui/app/pages/token/index.scss
+++ b/ui/app/pages/token/index.scss
@@ -61,7 +61,7 @@
         }
 
         &:hover {
-          background: $Black-900;
+          background: $Grey-000;
         }
 
         &--selected {
@@ -130,13 +130,13 @@
       &__right-primary-label {
         @include H5;
 
-        color: $Black-500;
+        color: $Grey-500;
       }
 
       &__right-secondary-label {
         @include H5;
 
-        color: $Black-500;
+        color: $Grey-500;
         opacity: 0.5;
       }
     }
@@ -146,7 +146,7 @@
     @include H4;
 
     padding: 16px;
-    color: $Black-500;
+    color: $Grey-500;
     min-height: 300px;
   }
 }
