--- a/ui/app/pages/token/fee-card/index.scss
+++ b/ui/app/pages/token/fee-card/index.scss
@@ -1,9 +1,10 @@
 .fee-card {
   border-radius: 8px;
-  border: 1px solid #D6D9DC;
+  border: 1px solid $Grey-100;
   width: 100%;
   margin-top: auto;
   margin-bottom: 8px;
+
   @include H7;
 
   &__main {
@@ -21,7 +22,7 @@
     }
 
     &:first-of-type {
-      margin-top: 0px;
+      margin-top: 0;
     }
 
     div {
@@ -64,12 +65,12 @@
   }
 
   &__link {
-    color: #037DD6;
+    color: $Blue-500;
     cursor: pointer;
-  } 
+  }
 
   &__total-box {
-    border-top: 1px solid #D6D9DC;
+    border-top: 1px solid $Grey-100;
     padding: 12px 16px 16px 16px;
   }
 
@@ -85,17 +86,17 @@
     display: flex;
     justify-content: flex-end;
     font-weight: bold;
-    color: #6A737D;
+    color: $Grey-500;
     margin-top: 4px;
   }
 
   &__row-header-secondary {
-    color: #6A737D;
+    color: $Grey-500;
     margin-right: 20px;
   }
 
   &__row-header-primary {
     font-weight: bold;
-    color: #6A737D;
-  } 
+    color: $Grey-500;
+  }
 }
