Adds slippage buttons component

--- a/ui/app/pages/token/index.scss
+++ b/ui/app/pages/token/index.scss
@@ -2,9 +2,10 @@
 @import 'countdown-timer/index';
 @import 'exchange-rate-display/index';
 @import 'fee-card/index';
+@import 'intro-popup/index';
 @import 'loading-swaps-quotes/index';
 @import 'select-quote-popover/index';
-@import 'intro-popup/index';
+@import 'slippage-buttons/index';
 
 .token {
   display: flex;
