--- a/ui/app/pages/token/index.scss
+++ b/ui/app/pages/token/index.scss
@@ -7,6 +7,7 @@
 @import 'fee-card/index';
 @import 'intro-popup/index';
 @import 'loading-swaps-quotes/index';
+@import 'main-quote-summary/index';
 @import 'searchable-item-list/index';
 @import 'select-quote-popover/index';
 @import 'slippage-buttons/index';
