fix about and unlock page

--- a/ui/app/pages/pages.scss
+++ b/ui/app/pages/pages.scss
@@ -17,4 +17,4 @@
 @import 'send/send';
 @import 'settings/index';
 @import 'token/index';
-@import 'create-account/index';
+@import 'unlock-page/index';
