Adds awaiting-swap component

--- a/ui/app/pages/token/index.scss
+++ b/ui/app/pages/token/index.scss
@@ -1,4 +1,5 @@
 @import 'actionable-message/index';
+@import 'awaiting-swap/index';
 @import 'build-quote/index';
 @import 'countdown-timer/index';
 @import 'dropdown-input-pair/index';
