--- a/ui/app/pages/token/index.scss
+++ b/ui/app/pages/token/index.scss
@@ -1,3 +1,4 @@
 @import 'fee-card/index';
 @import 'exchange-rate-display/index';
 @import 'actionable-message/index';
+@import 'loading-swaps-quotes/index';
