Adds select quote popover component

--- a/ui/app/pages/token/index.scss
+++ b/ui/app/pages/token/index.scss
@@ -2,6 +2,7 @@
 @import 'exchange-rate-display/index';
 @import 'fee-card/index';
 @import 'loading-swaps-quotes/index';
+@import 'select-quote-popover/index';
 
 .token {
   display: flex;
