Adds new wallet overview buttons

--- a/ui/app/components/app/wallet-overview/index.scss
+++ b/ui/app/components/app/wallet-overview/index.scss
@@ -20,7 +20,7 @@
   &__buttons {
     display: flex;
     flex-direction: row;
-    height: 44px;
+    height: 59px;
     margin-bottom: 24px;
   }
 }
@@ -83,8 +83,31 @@
     color: $Grey-400;
   }
 
-  .wallet-overview &__button {
-    @extend %asset-buttons;
+  &__button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 24px;
+
+    @include H7;
+
+    color: $Blue-500;
+    cursor: pointer;
+  }
+
+  &__button:last-of-type {
+    margin-right: 0;
+  }
+
+  &__circle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 36px;
+    width: 36px;
+    background: #037dd6;
+    border-radius: 18px;
+    margin-top: 6px;
   }
 }
 
@@ -115,7 +138,30 @@
     color: $Grey-400;
   }
 
-  .wallet-overview &__button {
-    @extend %asset-buttons;
+  &__button {
+    display: flex;
+    flex-direction: columns;
+    align-items: center;
+    margin-right: 24px;
+
+    @include H7;
+
+    cursor: pointer;
+    color: $Blue-500;
+  }
+
+  &__button:last-of-type {
+    margin-right: 0;
+  }
+
+  &__circle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 36px;
+    width: 36px;
+    background: #037dd6;
+    border-radius: 18px;
+    margin-top: 6px;
   }
 }
