--- a/ui/app/pages/token/searchable-item-list/index.scss
+++ b/ui/app/pages/token/searchable-item-list/index.scss
@@ -24,8 +24,7 @@
     scrollbar-width: none;
   }
 
-  &__item,
-  &__selected-item {
+  &__item {
     transition: 200ms ease-in-out;
     display: flex;
     flex-flow: row nowrap;
@@ -56,29 +55,10 @@
       opacity: 0.4;
       pointer-events: none;
     }
-
-    .identicon {
-      margin-right: 16px;
-    }
   }
 
-  &__selected-item {
-    &:last-of-type {
-      border-bottom: none;
-    }
-  }
-
-  &__item-icon {
-    width: 34px;
-    height: 34px;
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-    border-radius: 50%;
-    background-color: $white;
-    box-shadow: 0 2px 4px 0 rgba($black, 0.24);
-    margin-right: 8px;
-    flex: 0 0 auto;
+  &__identicon {
+    margin-right: 16px;
   }
 
   &__primary-label {
@@ -141,5 +121,19 @@
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
+  }
+
+  &__list-container {
+    z-index: 1002;
+    position: relative;
+    background: white;
+  }
+
+  &__search {
+    z-index: 1001;
+  }
+
+  &__item--highlighted {
+    background: $Grey-000;
   }
 }
