--- a/ui/app/pages/keychains/index.scss
+++ b/ui/app/pages/keychains/index.scss
@@ -170,7 +170,7 @@
   &__checkbox {
     background: #fff;
     border: 1px solid #cdcdcd;
-    outline: none !important;
+    outline: none;
     box-sizing: border-box;
     height: 34px;
     width: 34px;
