Logo opacity animation improvement

--- a/ui/app/pages/token/loading-swaps-quotes/index.scss
+++ b/ui/app/pages/token/loading-swaps-quotes/index.scss
@@ -84,11 +84,11 @@
 
   &__logo {
     position: fixed;
-    -webkit-transition: opacity 0.75s ease-in-out;
-    -moz-transition: opacity 0.75s ease-in-out;
-    -ms-transition: opacity 0.75s ease-in-out;
-    -o-transition: opacity 0.75s ease-in-out;
-    transition: opacity 0.75s ease-in-out;
+    -webkit-transition: opacity 0.5s linear;
+    -moz-transition: opacity 0.5s linear;
+    -ms-transition: opacity 0.5s linear;
+    -o-transition: opacity 0.5s linear;
+    transition: opacity 0.5s linear;
 
     div {
       height: 40px;
