Handle more conversion rate and symbol size edge cases in main-quote-summary

--- a/ui/app/pages/token/exchange-rate-display/index.scss
+++ b/ui/app/pages/token/exchange-rate-display/index.scss
@@ -5,6 +5,8 @@
   align-items: flex-end;
   justify-content: center;
   color: $Black-100;
+  width: 100%;
+  flex-wrap: wrap;
 
   span {
     margin-right: 4px;
