--- a/ui/app/components/ui/ui-components.scss
+++ b/ui/app/components/ui/ui-components.scss
@@ -35,5 +35,6 @@
 @import 'tabs/index';
 @import 'toggle-button/index';
 @import 'token-balance/index';
+@import 'tooltip/index';
 @import 'unit-input/index';
 @import 'url-icon/index';
