Adds countdown timer

--- a/ui/app/pages/token/index.scss
+++ b/ui/app/pages/token/index.scss
@@ -1,4 +1,5 @@
 @import 'actionable-message/index';
+@import 'countdown-timer/index';
 @import 'exchange-rate-display/index';
 @import 'fee-card/index';
 @import 'loading-swaps-quotes/index';
