--- a/ui/app/pages/token/select-quote-popover/quote-details/index.scss
+++ b/ui/app/pages/token/select-quote-popover/quote-details/index.scss
@@ -7,7 +7,7 @@
   &__detail-header {
     @include H7;
 
-    color: $Black-100;
+    color: $Grey-400;
     margin-bottom: 2px;
     display: flex;
   }
