Updates wallet-overview, and adds supporting ducks, constants and logo, to meet latest requirements for swaps

--- a/ui/app/components/app/wallet-overview/index.scss
+++ b/ui/app/components/app/wallet-overview/index.scss
@@ -93,6 +93,11 @@
 
     color: $Blue-500;
     cursor: pointer;
+
+    &--disabled {
+      opacity: 0.3;
+      cursor: auto;
+    }
   }
 
   &__button:last-of-type {
