--- a/ui/app/pages/token/index.scss
+++ b/ui/app/pages/token/index.scss
@@ -3,8 +3,48 @@
 @import 'fee-card/index';
 @import 'loading-swaps-quotes/index';
 
-.swap {
+.token {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+
+  &--scrollable {
+    overflow: auto;
+  }
+
+  @media screen and (min-width: 576px) {
+    width: 460px;
+    background: white;
+    z-index: 90;
+    border: 1px solid $Grey-100;
+    box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.08);
+    border-radius: 8px;
+    height: 620px;
+    overflow: hidden;
+  }
+
   &__content {
     display: flex;
+    flex-flow: column;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-top: 4px;
+
+    @media screen and (max-width: 576px) {
+      &--overflow {
+        overflow: scroll;
+      }
+    }
+
+    @media screen and (min-width: 576px) {
+      width: 348px;
+    }
   }
 }
