--- a/ui/app/components/ui/list-item/index.scss
+++ b/ui/app/components/ui/list-item/index.scss
@@ -44,16 +44,18 @@
     display: flex;
     align-items: center;
 
-    > h2 {
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-    }
 
     &-wrap {
       display: inline-block;
       margin-left: 8px;
     }
+  }
+
+  &__title {
+    padding: 0 5px 0 0;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 
   &__subheading {
