--- a/ui/app/components/app/asset-list-item/asset-list-item.scss
+++ b/ui/app/components/app/asset-list-item/asset-list-item.scss
@@ -1,4 +1,12 @@
 .asset-list-item {
+
+  &__token-value {
+    padding: 0 5px 0 0;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+
   &__chevron-right {
     color: $Grey-500;
   }
