Apply two line style to dropdown-input-pair input if the texts overlap

--- a/ui/app/pages/token/dropdown-input-pair/index.scss
+++ b/ui/app/pages/token/dropdown-input-pair/index.scss
@@ -48,6 +48,13 @@
     display: flex;
     align-items: center;
     color: $Grey-500;
+
+    &--two-lines {
+      right: inherit;
+      left: 157px;
+      align-items: unset;
+      top: 38px;
+    }
   }
 
   &__selector--closed {
