Improve styling of url-icon in dropdown lists

--- a/ui/app/components/ui/url-icon/index.scss
+++ b/ui/app/components/ui/url-icon/index.scss
@@ -1,12 +1,28 @@
 .url-icon {
-  width: 34px;
-  height: 34px;
-  background-repeat: no-repeat;
-  background-size: contain;
+  width: 24px;
+  height: 24px;
   background-position: center;
   border-radius: 50%;
   background-color: $white;
   box-shadow: 0 2px 4px 0 rgba($black, 0.24);
-  margin-right: 8px;
   flex: 0 0 auto;
+  -moz-animation: fadein 1s;
+
+  /* Firefox */
+  -webkit-animation: fadein 1s;
+
+  /* Safari and Chrome */
+  -o-animation: fadein 1s;
+
+  /* Opera */
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
