--- a/ui/app/pages/token/dropdown-search-list/index.scss
+++ b/ui/app/pages/token/dropdown-search-list/index.scss
@@ -59,6 +59,10 @@
     justify-content: center;
     align-items: center;
     height: 60px;
+
+  &__selector-closed-icon {
+    width: 34px;
+    height: 34px;
   }
 
   &__closed-primary-label {
