Adds intro-popover

--- a/ui/app/pages/token/index.scss
+++ b/ui/app/pages/token/index.scss
@@ -4,6 +4,7 @@
 @import 'fee-card/index';
 @import 'loading-swaps-quotes/index';
 @import 'select-quote-popover/index';
+@import 'intro-popup/index';
 
 .token {
   display: flex;
