--- a/ui/app/components/ui/list-item/index.scss
+++ b/ui/app/components/ui/list-item/index.scss
@@ -44,11 +44,16 @@
     display: flex;
     align-items: center;
 
-
     &-wrap {
       display: inline-block;
       margin-left: 8px;
     }
+  }
+
+  &__title {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   &__subheading {
