Add missing sun-check-icon and other fixes to get storybook for select-quote-popover behaving correctly

--- a/ui/app/pages/token/select-quote-popover/index.scss
+++ b/ui/app/pages/token/select-quote-popover/index.scss
@@ -145,6 +145,12 @@
     }
   }
 
+  &__receiving-value-text {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
   &__zero-slippage {
     font-size: 12px;
     line-height: 100%;
