--- a/ui/app/pages/swaps/index.scss
+++ b/ui/app/pages/swaps/index.scss
@@ -13,49 +13,15 @@
 @import 'select-quote-popover/index';
 @import 'slippage-buttons/index';
 
+@import 'swaps-route-container/index';
+
 .swaps {
   display: flex;
-  flex-flow: column;
-  align-items: center;
-  height: 100%;
+  justify-content: center;
   width: 100%;
-  overflow: hidden;
-
-  &--scrollable {
-    overflow: auto;
-  }
 
   @media screen and (min-width: 576px) {
-    width: 460px;
-    background: white;
     z-index: 90;
-    border: 1px solid $Grey-100;
-    box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.08);
-    border-radius: 8px;
-    height: 620px;
-    overflow: hidden;
-  }
-
-  &__content {
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    padding-left: 24px;
-    padding-right: 24px;
-    padding-top: 4px;
-
-    @media screen and (max-width: 576px) {
-      &--overflow {
-        overflow: scroll;
-      }
-    }
-
-    @media screen and (min-width: 576px) {
-      width: 348px;
-    }
   }
 
   &__dropdown-swap-to-header {
@@ -77,7 +43,6 @@
     max-height: 56px;
   }
 
-  &__title,
   &__input-label {
     @include H5;
 
