Adds full error state support to the 'AwaitingSwap' component, removes error state support from  loading-swaps-quotes

--- a/ui/app/pages/swaps/awaiting-swap/index.scss
+++ b/ui/app/pages/swaps/awaiting-swap/index.scss
@@ -3,6 +3,8 @@
   flex-flow: column;
   justify-content: center;
   height: 100%;
+  padding-left: 32px;
+  padding-right: 32px;
 
   div {
     text-align: center;
@@ -39,6 +41,11 @@
     > span {
       display: flex;
     }
+  }
+
+  &__time-estimate-text {
+    margin-right: 2px;
+    font-weight: bold;
   }
 
   &__view-on-etherscan {
