add time and origin to confirm page

--- a/ui/app/components/app/confirm-page-container/confirm-page-container-header/index.scss
+++ b/ui/app/components/app/confirm-page-container/confirm-page-container-header/index.scss
@@ -3,6 +3,13 @@
   flex-direction: column;
   flex: 0 0 auto;
 
+  &__time {
+    font-size: 12px;
+    color: $dusty-gray;
+    margin-top: 2px;
+    text-align: center;
+  }
+
   &__row {
     display: flex;
     justify-content: space-between;
