--- a/ui/app/components/ui/ui-components.scss
+++ b/ui/app/components/ui/ui-components.scss
@@ -26,6 +26,7 @@
 @import 'list-item/index';
 @import 'loading-screen/index';
 @import 'menu/menu';
+@import 'origin-row/index';
 @import 'page-container/index';
 @import 'popover/index';
 @import 'pulse-loader/index';
