--- a/ui/app/pages/swaps/build-quote/index.scss
+++ b/ui/app/pages/swaps/build-quote/index.scss
@@ -1,7 +1,115 @@
 .build-quote {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
+  display: 'flex';
+  flex-flow: 'column';
+  flex: 1;
+  width: '100%';
+
+  &__content {
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+  }
+
+  &__content {
+    display: flex;
+  }
+
+  &__dropdown-convert-to-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin-top: 32px;
+    margin-bottom: 12px;
+  }
+
+  &__dropdown-input-pair-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    width: 100%;
+    margin-bottom: 12px;
+    flex: 0.5 1 auto;
+    max-height: 56px;
+  }
+
+  &__title,
+  &__input-label {
+    @include H5;
+
+    font-weight: bold;
+    color: $Black-100;
+    margin-top: 3px;
+  }
+
+  &__swap-arrows-row {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 16px;
+    padding-top: 12px;
+    height: 24px;
+    position: relative;
+  }
+
+  &__swap-arrows {
+    flex: 0 0 auto;
+    height: 16px;
+    width: 12px;
+    background-image: url(/images/icons/swap2.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    cursor: pointer;
+  }
+
+  &__max-button {
+    @include H7;
+
+    color: $Blue-500;
+    cursor: pointer;
+  }
+
+  &__dropdown-convert-to-header {
+    margin-top: 0;
+  }
+
+  &__balance-message {
+    @include H7;
+
+    width: 100%;
+    color: $Grey-500;
+    margin-top: 4px;
+    display: flex;
+    flex-flow: column;
+
+    &--error {
+      div:first-of-type {
+        font-weight: bold;
+        color: $Black-100;
+      }
+
+      div:last-of-type {
+        font-weight: normal;
+        color: $Grey-500;
+      }
+    }
+  }
+
+  &__slippage-buttons-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 32px;
+  }
+
+  &__to-dropdown {
+    max-height: 290px;
+
+    @media screen and (max-width: 576px) {
+      max-height: 204px;
+    }
+  }
 
   &__to-dropdown--max-height {
     max-height: 152px;
