--- a/ui/app/pages/swaps/loading-swaps-quotes/index.scss
+++ b/ui/app/pages/swaps/loading-swaps-quotes/index.scss
@@ -1,10 +1,17 @@
 .loading-swaps-quotes {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  max-height: 445px;
+  display: 'flex';
+  flex-flow: 'column';
+  flex: 1;
+  width: '100%';
+
+  &__content {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-height: 445px;
+  }
 
   &__quote-counter {
     @include H7;
