--- a/ui/app/pages/swaps/build-quote/index.scss
+++ b/ui/app/pages/swaps/build-quote/index.scss
@@ -103,8 +103,11 @@
     margin-top: 32px;
   }
 
-  &__to-dropdown {
+  &__open-dropdown {
     max-height: 290px;
+    box-shadow: 0 0 14px rgba(0, 0, 0, 0.18);
+    position: absolute;
+    width: 100%;
 
     @media screen and (max-width: 576px) {
       max-height: 204px;
