--- a/ui/app/pages/swaps/dropdown-input-pair/index.scss
+++ b/ui/app/pages/swaps/dropdown-input-pair/index.scss
@@ -57,7 +57,7 @@
     }
   }
 
-  &__selector--closed {
+  .dropdown-input-pair__selector--closed {
     height: 60px;
     width: 142px;
     border-top-right-radius: 0;
