--- a/ui/app/pages/swaps/index.scss
+++ b/ui/app/pages/swaps/index.scss
@@ -13,6 +13,7 @@
 @import 'select-quote-popover/index';
 @import 'slippage-buttons/index';
 @import 'swaps-footer/index';
+@import 'view-quote/index';
 
 .swaps {
   display: flex;
