--- a/ui/app/pages/swaps/index.scss
+++ b/ui/app/pages/swaps/index.scss
@@ -12,8 +12,7 @@
 @import 'searchable-item-list/index';
 @import 'select-quote-popover/index';
 @import 'slippage-buttons/index';
-
-@import 'swaps-route-container/index';
+@import 'swaps-footer/index';
 
 .swaps {
   display: flex;
@@ -22,6 +21,83 @@
 
   @media screen and (min-width: 576px) {
     z-index: 90;
+  }
+
+  &__container {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+
+    &--scrollable {
+      overflow: auto;
+    }
+
+    @media screen and (min-width: 576px) {
+      width: 460px;
+      background: white;
+      border: 1px solid $Grey-100;
+      box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.08);
+      border-radius: 8px;
+      height: 620px;
+      overflow: hidden;
+    }
+  }
+
+  &__content {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    height: 100%;
+
+    @media screen and (max-width: 576px) {
+      &--overflow {
+        overflow: scroll;
+      }
+    }
+
+    @media screen and (min-width: 576px) {
+      width: 348px;
+    }
+  }
+
+  &__title {
+    @include H5;
+
+    font-weight: bold;
+    color: $Black-100;
+    margin-top: 3px;
+  }
+
+  &__header {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 0;
+    padding-bottom: 16px;
+    background: $Grey-000;
+    width: 100%;
+    position: relative;
+
+    @media screen and (min-width: 576px) {
+      padding-top: 8px;
+      padding-bottom: 8px;
+      height: 66px;
+    }
+  }
+
+  &__header-cancel {
+    @include H7;
+
+    color: $Blue-500;
+    cursor: pointer;
+    position: absolute;
+    right: 24px;
   }
 
   &__dropdown-swap-to-header {
