--- a/ui/app/pages/swaps/actionable-message/index.scss
+++ b/ui/app/pages/swaps/actionable-message/index.scss
@@ -44,6 +44,16 @@
     }
   }
 
+  &--danger {
+    background: $Red-100;
+    border: 1px solid $Red-500;
+    justify-content: flex-start;
+
+    .actionable-message__message {
+      color: #d73a49;
+    }
+  }
+
   &--left-aligned {
     .actionable-message__message,
     .actionable-message__actions {
