--- a/ui/app/pages/swaps/awaiting-swap/index.scss
+++ b/ui/app/pages/swaps/awaiting-swap/index.scss
@@ -1,8 +1,9 @@
 .awaiting-swap {
-  display: 'flex';
-  flex-flow: 'column';
+  display: flex;
+  flex-flow: column;
+  align-items: center;
   flex: 1;
-  width: '100%';
+  width: 100%;
 
   &__content {
     display: flex;
