--- a/ui/app/pages/swaps/dropdown-search-list/index.scss
+++ b/ui/app/pages/swaps/dropdown-search-list/index.scss
@@ -44,7 +44,7 @@
 
   &__caret {
     position: absolute;
-    right: 5px;
+    right: 16px;
     color: $Grey-200;
   }
 
@@ -60,8 +60,12 @@
     width: 100%;
     height: 60px;
 
+    i {
+      font-size: 1.2em;
+    }
+
     .dropdown-search-list__item-labels {
-      width: 70%;
+      width: 56%;
     }
   }
 
@@ -104,7 +108,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-left: 6px;
+    margin-left: 8px;
   }
 
   &__select-default {
