--- a/ui/app/pages/swaps/loading-swaps-quotes/index.scss
+++ b/ui/app/pages/swaps/loading-swaps-quotes/index.scss
@@ -1,8 +1,9 @@
 .loading-swaps-quotes {
-  display: 'flex';
-  flex-flow: 'column';
+  display: flex;
+  flex-flow: column;
+  align-items: center;
   flex: 1;
-  width: '100%';
+  width: 100%;
 
   &__content {
     height: 100%;
@@ -17,7 +18,6 @@
     @include H7;
 
     color: $Grey-500;
-    font-weight: bold;
     margin-top: 3px;
     display: flex;
     justify-content: center;
@@ -91,11 +91,14 @@
 
   &__logo {
     position: fixed;
-    -webkit-transition: opacity 0.5s linear;
-    -moz-transition: opacity 0.5s linear;
-    -ms-transition: opacity 0.5s linear;
-    -o-transition: opacity 0.5s linear;
-    transition: opacity 0.5s linear;
+
+    &--transition {
+      -webkit-transition: opacity 0.4s linear;
+      -moz-transition: opacity 0.4s linear;
+      -ms-transition: opacity 0.4s linear;
+      -o-transition: opacity 0.4s linear;
+      transition: opacity 0.4s linear;
+    }
 
     div {
       height: 40px;
