--- a/ui/app/pages/swaps/select-quote-popover/index.scss
+++ b/ui/app/pages/swaps/select-quote-popover/index.scss
@@ -52,6 +52,10 @@
     width: 100%;
     padding-left: 20px;
     margin-bottom: 4px;
+
+    .select-quote-popover__receiving {
+      width: 104px;
+    }
   }
 
   &__column-header {
@@ -133,7 +137,7 @@
   &__receiving {
     display: flex;
     flex-direction: column;
-    width: 104px;
+    width: 112px;
   }
 
   &__receiving-value {
@@ -159,15 +163,11 @@
   }
 
   &__network-fees {
-    width: 72px;
-
-    div {
-      width: 60px;
-    }
+    width: 110px;
   }
 
   &__quote-source {
-    width: 48px;
+    width: 28px;
     display: flex;
     align-items: flex-end;
     margin-right: 24px;
@@ -177,13 +177,42 @@
     }
   }
 
+  &__quote-source-toggle {
+    margin-left: 2px;
+    height: 12px;
+  }
+
   &__receiving-header {
     display: flex;
     flex-flow: column;
   }
 
+  &__network-fees-header {
+    display: flex;
+    flex-flow: row;
+    align-items: flex-end;
+
+    > span {
+      width: 77px;
+    }
+
+    > div {
+      height: 12px;
+    }
+
+    > svg {
+      margin-bottom: 2px;
+    }
+  }
+
+
   &__receiving-symbol {
     color: $Grey-500;
+
+    > div {
+      width: 12px;
+      height: 12px;
+    }
   }
 
   &__receiving-label {
